# MyRepoFeatExtract

./: CMakeLists.txt  CodeInterface.docx  MainScript.cpp  Makefile  README.md  outputFeatures.feat
lib/: FeatureExtractor.h  GaborFilter.h  GaborPhasePatterns.h  SQI.h  headers.h
src/: FeatureExtractor.cpp  GaborFilter.cpp  GaborPhasePatterns.cpp  HGPP.cpp  SQI.cpp  test.cpp
